--- a/app/src/main/res/layout/fragment_01.xml
+++ b/app/src/main/res/layout/fragment_01.xml
@@ -52,6 +52,16 @@
                 android:textColor="#000000" />
 
             <TextView
+                android:id="@+id/value04"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:textSize="17sp"
+                android:textColor="#000000" />
+
+            <TextView
                 android:id="@+id/total"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
