--- a/app/src/main/res/layout/fragment_03.xml
+++ b/app/src/main/res/layout/fragment_03.xml
@@ -8,7 +8,7 @@
 
     <com.jjoe64.graphview.GraphView
         android:layout_width="match_parent"
-        android:layout_height="400dip"
+        android:layout_height="match_parent"
         android:id="@+id/graph" />
 
 </LinearLayout>
